--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <label for="generations">Number of Generations:</label>
     <input type="number" id="generations" value="10" min="1">
     <br>
+    <label for="populationSize">Population Size:</label>
+    <input type="number" id="populationSize" value="100" min="2">
+    <br>
     <button onclick="runSimulation()">Run Simulation</button>
   </div>
 
