--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div id="output">
     <h2>Results</h2>
-    <pre id="results"></pre>
+    <pre id="results" style="white-space: pre-wrap; font-family: monospace;"></pre>
     <canvas id="frequencyChart" width="600" height="400"></canvas>
   </div>
 
