--- a/index.html
+++ b/index.html
@@ -2,71 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Genetic Simulation</title>
+  <title>Genetics Simulation</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
     }
-    label {
+    input, label {
       display: block;
-      margin-top: 10px;
-    }
-    textarea {
-      width: 100%;
-      height: 200px;
-      margin-top: 10px;
-      font-family: monospace;
+      margin-bottom: 10px;
     }
     canvas {
-      max-width: 100%;
       margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <h1>Genetics and Evolution Simulator</h1>
+  <h1>Hardy-Weinberg Simulation</h1>
 
-  <label>Initial Homozygous Recessive Count (aa):
-    <input type="number" id="homozygousRecessive" value="100">
-  </label>
+  <label>Initial Homozygous Recessive Frequency (aa): <input type="number" id="freqaa" step="0.01" value="0.25" min="0" max="1"></label>
+  <label>Generations: <input type="number" id="generations" value="50" min="1"></label>
+  <label>Starting Population Size: <input type="number" id="populationSize" value="100" min="1"></label>
+  <label>Carrying Capacity: <input type="number" id="carryingCapacity" value="100" min="1"></label>
 
-  <label>Total Starting Population Size:
-    <input type="number" id="populationSize" value="500">
-  </label>
+  <label>Fitness of AA: <input type="number" id="fitnessAA" step="0.01" value="1.0" min="0"></label>
+  <label>Fitness of Aa: <input type="number" id="fitnessAa" step="0.01" value="1.0" min="0"></label>
+  <label>Fitness of aa: <input type="number" id="fitnessaa" step="0.01" value="1.0" min="0"></label>
 
-  <label>Generations:
-    <input type="number" id="generations" value="50">
-  </label>
-
-  <label>Carrying Capacity:
-    <input type="number" id="carryingCapacity" value="500">
-  </label>
-
-  <label>Fitness of AA:
-    <input type="number" id="fitnessAA" value="1.0" step="0.1">
-  </label>
-
-  <label>Fitness of Aa:
-    <input type="number" id="fitnessAa" value="1.0" step="0.1">
-  </label>
-
-  <label>Fitness of aa:
-    <input type="number" id="fitnessaa" value="1.0" step="0.1">
-  </label>
-
-  <label>Drift Strength (0 to 1 is typical):
-    <input type="number" id="driftStrength" value="0.05" step="0.01" min="0">
-  </label>
+  <label>Genetic Drift Factor (0 to 1 recommended): <input type="number" id="drift" step="0.01" value="0.1" min="0"></label>
 
   <button onclick="runSimulation()">Run Simulation</button>
 
-  <h2>Raw Genotype Counts</h2>
-  <textarea id="results" readonly></textarea>
+  <h2>Raw Output</h2>
+  <pre id="results" style="max-height: 200px; overflow-y: auto;"></pre>
 
   <h2>Graph</h2>
-  <canvas id="genotypeChart" width="600" height="400"></canvas>
+  <canvas id="frequencyChart" width="800" height="400"></canvas>
 
   <script src="script.js"></script>
 </body>
